--- a/package.json
+++ b/package.json
@@ -9,14 +9,27 @@
   },
   "dependencies": {
     "@prisma/client": "^3.6.0",
+    "@sendgrid/mail": "^7.6.0",
+    "@types/history": "^4.7.9",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
+    "dayjs": "^1.10.7",
+    "fs": "^0.0.1-security",
     "iron-session": "^6.0.4",
+    "joi": "^17.5.0",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "next": "12.0.7",
+    "next-i18next": "^10.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-day-picker": "^8.0.0-beta.36",
+    "react-dom": "17.0.2",
+    "react-multi-select-component": "^4.1.14",
+    "react-select": "^5.2.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/lodash": "^4.14.178",
     "@types/node": "17.0.1",
     "@types/react": "17.0.37",
     "eslint": "8.5.0",
